school summary complete

--- a/function.ipynb
+++ b/function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "b0515413",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "f22d7e91",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "id": "f7fa9593",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "ee715ed6",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 43,
    "id": "c443f99c",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "818aa580",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "8312f4f1",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "a220e439",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "451812e9",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "id": "ffcb68c5",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,18 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "id": "055567ee",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "92\n",
-      "85\n",
-      "87\n",
-      "98\n"
+     "ename": "SyntaxError",
+     "evalue": "unmatched '}' (154525027.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/63/mb0r37yj2kg4yfg5fkbv54kw0000gn/T/ipykernel_63216/154525027.py\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print(\"{:.0f}\".format)}\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched '}'\n"
      ]
     }
    ],
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "67a6da37",
    "metadata": {},
    "outputs": [
@@ -227,7 +225,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +243,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "292b11a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1dfd248",
    "metadata": {},
    "outputs": [],
    "source": []
