added average math and reading scores by grade

--- a/function.ipynb
+++ b/function.ipynb
@@ -241,19 +241,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "292b11a4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cat: \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name \n",
+    "\n",
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9bec1d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "babbdcc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof!woof!'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Dog: \n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        return self.sound + '' + self.sound\n",
+    "\n",
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "\n",
+    "print(first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "1c8ddce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lady\n",
+      "blonde\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'arf!arf!'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog ('Lady', 'blonde', 'arf!')\n",
+    "\n",
+    "print(second_dog.name)\n",
+    "print(second_dog.color)\n",
+    "second_dog.bark()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1dfd248",
+   "id": "14e9fe44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.head()\n"
+   ]
   }
  ],
  "metadata": {
