edited code to clarify thinking

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -920,6 +920,7 @@
     }
    ],
    "source": [
+    "#Just thomas 9th grade count\n",
     "thomas_9th_grade_count\n",
     "\n"
    ]
@@ -942,6 +943,7 @@
     }
    ],
    "source": [
+    "#Original student count\n",
     "student_count"
    ]
   },
@@ -963,6 +965,7 @@
     }
    ],
    "source": [
+    "#new student count without the thomas high school 9th graders.\n",
     "new_student_count"
    ]
   },
@@ -996,7 +999,7 @@
     }
    ],
    "source": [
-    "#Check that math values have changed from original file = Yes\n",
+    "#Check that math values have changed from original file which was 29370 = Yes\n",
     "passing_math_count "
    ]
   },
@@ -1018,7 +1021,7 @@
     }
    ],
    "source": [
-    "#Check that reading values have changed from original file = Yes\n",
+    "#Check that reading values have changed from original file which was 33610= Yes\n",
     "passing_reading_count \n"
    ]
   },
@@ -2804,16 +2807,16 @@
    ],
    "source": [
     "# Step 12. Replace the passing math percent for Thomas High School in the per_school_summary_df.\n",
-    "per_school_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"]>=70)]\n",
+    "# per_school_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"]>=70)]\n",
     "\n",
-    "per_school_passing_math\n",
+    "# per_school_passing_math\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "100bb885",
+   "id": "ce0faeab",
    "metadata": {},
    "outputs": [
     {
@@ -2844,15 +2847,15 @@
     }
    ],
    "source": [
-    "per_school_passing_math = per_school_passing_math.groupby([\"school_name\"]).count()[\"student_name\"]\n",
+    "# per_school_passing_math = per_school_passing_math.groupby([\"school_name\"]).count()[\"student_name\"]\n",
     "\n",
-    "per_school_passing_math"
+    "# per_school_passing_math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "553d5095",
+   "id": "de07f34b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2862,7 +2865,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "62a88ce9",
+   "id": "5239ca9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3197,12 +3200,10 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "d12298df",
+   "id": "55b01a8b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# per_school_summary_df.replace({\"% Passing Math\": \"Shelton High School\"}, per_THS_passing_math)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
