Added image files of DataFrames for summary

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "ce0faeab",
+   "id": "f68d609c",
    "metadata": {},
    "outputs": [
     {
@@ -2855,7 +2855,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "de07f34b",
+   "id": "3e715f37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2865,7 +2865,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "5239ca9b",
+   "id": "9f5b0521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3200,7 +3200,7 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "id": "55b01a8b",
+   "id": "e4a28efe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3691,7 +3691,7 @@
     "                \"11th\": eleventh_grade_math_score,\n",
     "                \"12th\": twelfth_grade_math_score})\n",
     "\n",
-    "math_scores_by_grade.head()"
+    "math_scores_by_grade"
    ]
   },
   {
@@ -3798,7 +3798,7 @@
     "                \"11th\": eleventh_grade_reading_score,\n",
     "                \"12th\": twelfth_grade_reading_score})\n",
     "\n",
-    "reading_scores_by_grade.head()"
+    "reading_scores_by_grade.head()\n"
    ]
   },
   {
